# microdrop

./: Cargo.toml  MICRODROP.md  PLAN.md  README.md  ideas.md  install_model.py  package-lock.json  requirements.txt  speech-to-text.py  stt-toggle.sh
.github/workflows/: ci.yml
benches/: audio_processing.rs
proptest-regressions/audio/: processing.txt
src/: error.rs  lib.rs  main.rs  telemetry.rs
src/audio/: mod.rs  processing.rs
src/cli/: mod.rs
src/config/: mod.rs
src/model/: mod.rs
src/notify/: mod.rs
src/output/: mod.rs
src/transcribe/: mod.rs
src/workflow/: mod.rs
tests/: integration_tests.rs
